force-app/main/default/objects/Opportunity/fields/Departement__c.field-meta.xml
<CustomField>
    <fullName>Departement__c</fullName>
    <label>Département</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Departements</valueSetName>
    </valueSet>
</CustomField>