force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Motif de la perte</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Perdu contre la concurrence</fullName>
            </value>
            <value>
                <fullName>Pas de budget</fullName>
            </value>
            <value>
                <fullName>Pas de décision/réponse</fullName>
            </value>
            <value>
                <fullName>Prix</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>CV Inadéquat</fullName>
            </value>
            <value>
                <fullName>Entretien raté</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>