force-app/main/default/objects/Opportunity/fields/Pole__c.field-meta.xml
<CustomField>
    <fullName>Pole__c</fullName>
    <label>Pôle</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pole</valueSetName>
    </valueSet>
</CustomField>